# unique_ip_counter

./: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SystemDesignDocument.md  docker-compose.yml  gen_siege_test.py  locustfile.py  prometheus.yml  requirements.txt  test-1.sh  test-2.sh  test.sh
.github/workflows/: rust.yml
benches/: ip_store_bench.rs  service_bench.rs
src/: error.rs  ip_store.rs  lib.rs  main.rs  metric_store.rs
src/config/: mod.rs  settings.rs
src/handlers/: health.rs  logs.rs  metrics.rs  mod.rs
src/models/: log_entry.rs  mod.rs  responses.rs
src/server/: app.rs  mod.rs  routes.rs
src/services/: ip_counter.rs  metrics.rs  mod.rs
src/storage/: ip_store.rs  metrics_store.rs  mod.rs
tests/common/: mod.rs
tests/integration/: health_test.rs  logs_test.rs  metrics_test.rs  mods.rs
